# eink-clock

./: .gitignore  .hgignore  LICENSE  README  bookmarks.txt  parts.txt
graphics/: large.fnt  small.fnt
kicad/: Hirose_FH26-39S-0.3SHW.kicad_mod  bom.py  cpu.sch  dcf77.sch  eink.sch  einkclock-cache.lib  einkclock.bak  einkclock.kicad_pcb  einkclock.kicad_pcb-bak  einkclock.lib  einkclock.net  einkclock.pro  einkclock.sch  einkclock.xml  fp-lib-table  kaini.bak  kaini.lib  voltage_sources.sch
kicad/einkclock.pretty/: Bourns_Inductor_SDR0703.kicad_mod  CP_Radial_D10.0mm_P7.62mm.kicad_mod  CP_Radial_D8.0mm_P5.08mm.kicad_mod  C_Disc_D4.3mm_W1.9mm_P5.08mm.kicad_mod  Crystal_Lying_1.kicad_mod  Hirose_FH26-39S-0.3SHW.kicad_mod  Inductor_TAIYO_YUDEN_3225.kicad_mod  Poti_100mil_200mil.kicad_mod  QFP48 Adapter.kicad_mod  Reichelt_DCF77_Module.kicad_mod
my_allocator/: Cargo.toml
my_allocator/src/: lib.rs
timekeeper/: .cproject  .gitignore  .project  Cargo.toml  Xargo.toml  build.rs  linker.ld  lpc1227-none-eabi-newlib.json  lpc1227-none-eabi.json  lpc1227.cfg
timekeeper/src/: bitops.h  cr_startup_lpc12xx.c  dcf77.c  dcf77.h  debug.h  debug.rs  hw.h  lib.rs  timekeeper.c  timekeeper.rs
timekeeper/src/app/: basetime.rs  datetime.rs  eutime.rs  graphics.rs  mod.rs
timekeeper/src/devices/: clock.rs  cpu.rs  dcf77.c  dcf77.rs  eink.rs  flash.rs  mod.rs  ram.rs
timekeeper/src/rawhw/: counter.rs  gpio.rs  hw.h  ioconfig.rs  mod.rs  nvic.rs  register.rs  rtc.rs  ssp.rs  syscon.h  syscon.rs  systick.rs
timekeeper_init/: .cproject  .project  makefile.defs
(+12 files in other folders)
