[package]
name = "timekeeper"
version = "0.1.0"
authors = ["Michael Kainer <michael@kainer.io>"]
build = "build.rs"

[profile.dev]
opt-level = 3
debug-assertions = true

[features]
semihosted = []

[lib]
name = "timekeeper"
crate-type = ["bin"]

[dependencies]
my_allocator = { path = "../my_allocator" }

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins.git"
rev = "9681358"
features = ["compiler-builtins", "mem"]
