[package]
name = "timekeeper"
version = "0.1.0"
authors = ["Michael Kainer <michael@kainer.io>"]
build = "build.rs"

[profile.dev]
opt-level = 3
debug-assertions = false  # Disabled because of LLVM bug #00000.

[features]
semihosted = []

[lib]
name = "timekeeper"
crate-type = ["bin"]

[dependencies]
my_allocator = { path = "../my_allocator" }
rlibc = "1.0"
