[package]
name = "timekeeper"
version = "0.1.0"
authors = ["Michael Kainer <michael@kainer.io>"]
build = "build.rs"

[profile.dev]
opt-level = 3
debug-assertions = false
overflow-checks = false

[features]
semihosted = []
fake_time = []
stay_awake = []

[lib]
name = "timekeeper"
crate-type = ["bin"]

[dependencies]
my_allocator = { path = "../my_allocator" }
rlibc = "1.0"
